--- a/style.css
+++ b/style.css
@@ -1,12 +1,61 @@
 body {
     font-family: 'Poppins', sans-serif;
     margin: 0%;
+    
 }
 
 h1 {
     font-size: 50px;
+    line-height: 20px;
+    
 }
 
 .orange-color {
     color: orange;
+}
+.flexible-container {
+    display: flex;
+    margin-bottom: 150px;
+}
+
+.half-width {
+    width: 50%;
+    padding-left: 2%;
+}
+
+.half-width {
+    width: 80%;
+}
+.link-button {
+    text-decoration: none;
+    background-image: linear-gradient(orange, tomato);
+    padding: 10px 40px;
+    border-radius: 5px;
+}
+
+.top-banner {
+    background-image: url(images/shapes/7.png);
+    background-repeat: no-repeat
+    
+}
+.link-button2 {
+    text-decoration: none;
+    background-image: linear-gradient(orange, tomato);
+    padding: 10px 40px;
+    border-radius: 5px;
+}
+.My {
+    margin-top: 80px;
+}
+
+
+
+
+
+.half-width {
+    width: 50%;
+}
+
+section {
+    display: flex;
 }
