--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
 body {
     font-family: 'Poppins', sans-serif;
     margin: 0%;
-    
 }
 
 h1 {
-    font-size: 50px;
+    font-size: 40px;
     line-height: 20px;
     
 }
@@ -13,6 +12,7 @@ h1 {
 .orange-color {
     color: orange;
 }
+
 .flexible-container {
     display: flex;
     margin-bottom: 150px;
@@ -26,31 +26,28 @@ h1 {
 .half-width {
     width: 80%;
 }
+
 .link-button {
     text-decoration: none;
     background-image: linear-gradient(orange, tomato);
     padding: 10px 40px;
-    border-radius: 5px;
+    border-radius: 20px;
 }
 
 .top-banner {
     background-image: url(images/shapes/7.png);
     background-repeat: no-repeat
-    
 }
+
 .link-button2 {
     text-decoration: none;
     background-image: linear-gradient(orange, tomato);
     padding: 10px 40px;
-    border-radius: 5px;
+    border-radius: 20px;
 }
-.My {
-    margin-top: 80px;
+h1,p{
+    text-align: center;
 }
-
-
-
-
 
 .half-width {
     width: 50%;
@@ -59,3 +56,43 @@ h1 {
 section {
     display: flex;
 }
+
+.flexible-container-1 {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.three-width img {
+    width: 350px;
+    height: auto;
+    margin: 25px;
+    border-radius: 20px;
+}
+
+.three-width {
+    background-color: white;
+    margin: 15px;
+    border-radius: 20px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+.three-width h1,
+p {
+    margin-left: 28px;
+    margin-top: -5;
+    line-height: 20px;
+}
+
+.tag {
+    margin-left: 30px;
+}
+.flexible-container-2{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
